--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   http: ^0.12.2
   dio: ^3.0.10
   shared_preferences: ^0.5.12+4
+  carousel_slider: ^1.3.0
+  fl_chart: ^0.12.2
 
 
 dev_dependencies:
@@ -76,6 +78,9 @@ flutter:
     - family: OpenSansLight
       fonts:
         - asset: fonts/OpenSans-Light.ttf
+    - family: OpenSansEB
+      fonts:
+        - asset: fonts/OpenSans-ExtraBold.ttf
 
   #
   # For details regarding fonts from package dependencies,
